fixed scrollbar added shadows and changed pointer when over the product container

--- a/css/style.css
+++ b/css/style.css
@@ -24,14 +24,19 @@ nav{
 }
 nav li a{
     text-decoration: none;
-    color: black;
+    /* color: black; */
     line-height: 50px;
     width: 50px;
     height: 50px;
     background-color: white;
     border-radius: 50%;
-    box-shadow: 0px 2px 2px grey;
     margin: 50px 15px;
+    box-shadow: 2px 3px 3px grey;
+}
+nav li a:hover{
+    /* background-color: grey; */
+    transition: 0.5s;
+    box-shadow: 0px 0px 20px white;
 }
 nav li{
     text-align: center;
@@ -40,11 +45,10 @@ nav li{
 /* ///NAVBAR */
 main .container{
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     color: #FFFF00;
-    /* background-color: rgba(255, 0,0 , 0.8); */
     position: relative;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     font-size: 2rem;
     font-weight: 900;
     line-height: 3rem;
@@ -57,6 +61,7 @@ main .container{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    cursor: pointer;
 }
 .container .product img{
     width: inherit;
@@ -74,11 +79,3 @@ main .container{
     background-color: rgba(255, 255,0 , 0.8);
     color: rgb(0, 128, 0 );
 }
-/* .container .product h2
-{
-    font-size: 3rem;
-    font-weight: 900;
-    line-height: 3rem;
-    text-transform: uppercase;
-    text-align: center;
-} */
